# FactorCore

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat
cpp/: CMakeLists.txt  FactorCore.cpp  FactorCore.h
cpp/include/: custom_factor.hpp  elutils.hpp  factor_base.hpp  market_data.hpp
cpp/src/: custom_factor.cpp  factor_base.cpp  module.cpp
python/: diagnose.py  factor_wrapper.py  test_factor.py  test_factor_detail.py
